Replace raw foreign key value in boards with primary descriptors

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -17,7 +17,7 @@
       <% @boards.each do |board| %>
       <tr>
         <td><%= board.title %></td>
-        <td><%= board.user_id %></td>
+        <td><%= board.user.username %></td>
         <td>
           <a href="/boards/<%= board.id %>" class="btn btn-primary">Show</a>
           <a href="/boards/<%= board.id %>/edit" class="btn btn-warning">Edit</a>
