--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= card.title %></td>
         <td><%= card.description %></td>
-        <td><%= card.list_id %></td>
+        <td><%= card.list.title %></td>
         <td><%= card.image %></td>
         <td>
           <a href="/cards/<%= card.id %>" class="btn btn-primary">Show</a>
