Only board user can modify board

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -17,12 +17,14 @@
       <a href="/boards" class="btn btn-primary">
         Back
       </a>
-      <a href="/boards/<%= @board.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_board/<%= @board.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
+      <% if current_user == @board.user %>
+        <a href="/boards/<%= @board.id %>/edit" class="btn btn-warning">
+          Edit
+        </a>
+        <a href="/delete_board/<%= @board.id %>" class="btn btn-danger" rel="nofollow">
+          Delete
+        </a>
+      <% end %>
     </div>
   </div>
 </div>
