--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -20,8 +20,11 @@
         <td><%= board.user.username %></td>
         <td>
           <a href="/boards/<%= board.id %>" class="btn btn-primary">Show</a>
-          <a href="/boards/<%= board.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_board/<%= board.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          
+          <% if current_user == board.user %>
+            <a href="/boards/<%= board.id %>/edit" class="btn btn-warning">Edit</a>
+            <a href="/delete_board/<%= board.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
