--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -15,7 +15,7 @@
       <dd><%= @card.list_id %></dd>
 
       <dt>Image</dt>
-      <dd><%= @card.image %></dd>
+      <dd><img src="<%= @card.image %>" class="img-responsive"></dd>
 
     </dl>
 
