--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -26,3 +26,34 @@
     </div>
   </div>
 </div>
+
+<!-- A List has many cards -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Cards
+      </li>
+
+      <% @list.cards.each do |card| %>
+        <li class="list-group-item">
+          <a href="/cards/<%= card.id %>">
+            <%= card.title %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/cards/<%= card.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/cards/<%= card.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_card/<%= card.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
