--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -56,6 +56,29 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_list" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for title -->
+      <div class="form-group">
+        <label for="title" class="control-label">
+          Title
+        </label>
+
+        <input type="text" id="title" name="title" placeholder="Title" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for board_id -->
+      <input type="hidden" name="board_id" value="<%= @board.id %>">
+
+      <button class="btn btn-block btn-success">
+        Create List
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
