--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -17,9 +17,21 @@
 
       <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.card.title %></td>
+        <td>
+          <% if comment.card.present? %>
+            <a href="/cards/<%= comment.card.id %>">
+              <%= comment.card.title %>
+            </a>
+          <% end %>
+        </td>
         <td><%= comment.body %></td>
-        <td><%= comment.user.username %></td>
+        <td>
+          <% if comment.user.present? %>
+            <a href="/users/<%= comment.user.id %>">
+              <%= comment.user.username %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
           
