--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -6,13 +6,25 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Card</dt>
-      <dd><%= @comment.card_id %></dd>
+      <dd>
+        <% if @comment.card.present? %>
+          <a href="/cards/<%= @comment.card_id %>">
+            <%= @comment.card.title %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Body</dt>
       <dd><%= @comment.body %></dd>
 
       <dt>User</dt>
-      <dd><%= @comment.user_id %></dd>
+      <dd>
+        <% if @comment.user.present? %>
+          <a href="/users/<%= @comment.user_id %>">
+            <%= @comment.user.username %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
